# stt

./: .gitignore  AGENTS.md  README.md  biome.json  bts.jsonc  lefthook.yml  manifest  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.json
.agents/skills/plan/: SKILL.md  worktrees.md
.agents/skills/plan/worktrees/: SKILL.md  audio-capture.md  session-metadata.md
.agents/skills/tanstack-router/: SKILL.md
.agents/skills/turborepo/: SKILL.md
.agents/skills/ultracite/: SKILL.md
.agents/skills/web-perf/: SKILL.md
.agents/skills/webapp-testing/: SKILL.md
.agents/skills/workstreams/: SKILL.md
.agents/skills/worktrees/: SKILL.md  audio-capture.md  audio-tests.md  export-tests.md  manual-qa.md  model-management.md  model-tests.md  model-ui.md  permissions-safety.md  prefs-contract.md  ptt-runtime.md  record-mode.md  route-tests.md  session-persistence.md  typing-fallback.md
.beads/: .gitignore  config.yaml  graph.html  issues.jsonl  metadata.json  pollution-backup.jsonl  push-state.json
.beads/.backup.old/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.beads/backup/: backup_state.json  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.beads/hooks/: commit-msg  post-checkout  post-commit  post-merge  pre-commit  pre-commit.old  pre-push
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: routeTree.gen.ts
apps/web/src-tauri/: Cargo.toml  Info.plist  clippy.toml  tauri.conf.json
apps/web/src-tauri/src/: audio.rs  db.rs  keys.rs  lib.rs  permissions.rs  prefs.rs  session.rs  stt.rs  type_.rs
apps/web/src/components/: header.tsx  (+1 more)
scripts/: graph-combine.mjs  validate-security.mjs
(+32 files in other folders)
