[package]
name = "app"
version = "0.1.0"
description = "stt - local speech-to-text"
authors = ["Stephen"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0" }
tauri-plugin-log = "2"
directories = "5.0"
anyhow = "1.0"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2.0"
