[package]
name = "app"
version = "0.1.0"
description = "stt - local speech-to-text"
authors = ["Stephen"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0" }
tauri-plugin-log = "2"
directories = "5.0"
anyhow = "1.0"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2.0"
rdev = "0.5"
enigo = "0.3"
arboard = "3.4"
whisper-rs = { version = "0.15", features = ["metal"] }
sha2 = "0.10"
hex = "0.4"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
cpal = "0.15"
hound = "3.5"
